<resources>
    <string name="app_name">Torient</string>
    <string name="creator">Creator:</string>
    <string name="comment">Comment:</string>
    <string name="infohash">Infohash:</string>
    <string name="size">Size:</string>


    <string name="torrent_channel_name">Torrent</string>
    <string name="transfer_channel_name">Transfer</string>
    <string name="torrent_channel_description">Active torrents</string>
    <string name="transfer_channel_description">Active file transferring</string>
    <string name="download">Download</string>
    <string name="add">ADD</string>
    <string name="submit">Submit</string>
    <string name="enter_your_magnet">Enter your magnet</string>
    <string name="nothing_here_add_a_torrent_to_start">Nothing here..\nAdd a torrent to start</string>
    <string name="meta_data_not_loaded_files_will_appear">Meta data is not available..\nFile will be appeared once it\'s been loaded</string>
    <string name="overview">Overview</string>
    <string name="files">Files</string>
    <string name="preference">Preference</string>
    <string name="speed">Speed</string>
    <string name="maximum_peers">Maximum peers</string>
    <string name="honor_global_maximum_peers">Honor global maximum peers</string>
    <string name="connections">Connections</string>
    <string name="upload_speed_limit">Upload speed limit</string>
    <string name="limit_upload_rate_kb_s">Limit upload rate (KB/s)</string>
    <string name="download_speed_limit">Download speed limit</string>
    <string name="limit_download_rate_kb_s">Limit download rate (KB/s)</string>
    <string name="honor_global_limit">Honor global limit</string>
    <string name="copy_magnet">Copy magnet</string>
    <string name="save_to_downloads">Save to Downloads</string>
    <string name="save_downloaded_files">Save downloaded files</string>
</resources>
